nexus-collections/tests/ui/cannot_use_slot_after_unlink.stderr
error[E0382]: borrow of moved value: `slot`
  --> tests/ui/cannot_use_slot_after_unlink.rs:18:23
   |
13 |     let slot = list.link_back(detached);
   |         ---- move occurs because `slot` has type `nexus_collections::ListSlot<u64>`, which does not implement the `Copy` trait
14 |
15 |     let _detached = list.unlink(slot);
   |                                 ---- value moved here
...
18 |     let _ = list.read(&slot, |x| *x);
   |                       ^^^^^ value borrowed here after move
